snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210906.104450-1.pom.sha256
f1c0aa78c2510b27b09fd3e7a4ab0977ae57ffe7adfc8fbba8169d638fc0f630